# kyra_copper

./: Cargo.toml
assets/: floor_plan_1.txt  floor_plan_1.yaml
assets/hero/ai/: Policewoman.ai  PolicewomanCC.ai
assets/hero/eps/: PolicewomanCS.eps  PolicewomanEPS-10.eps
assets/hero/scml/: Policewoman.scml
assets/levels/level1/: level1.json
assets/robber/Ai & Eps/: Game BG.ai  Game BG.eps  Robber 2D Game Character Sprites 90.ai  Robber 2D Game Character Sprites 90.eps
assets/robber/Spriter/: animations.scml
assets/tiles/: level1..tmj  level1.tmx  tiled.tiled-session  tiles.tsx
src/: hero.rs  main.rs  robber.rs  tilemap.rs
