[package]
name = "kyra_the_copper"
version = "0.1.0"
edition = "2021"
authors = ["Ramneek Handa"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
leafwing-input-manager = {version = "0.10.0"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
